# BaoBaoPaddleOCR.NET

./: .gitignore  BaoBaoPaddleOCR.slnx  Directory.Build.props  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  bootstrap.ps1  build-native.ps1  export-standalone-repo.ps1  pack-nuget.ps1  publish-local-feed.ps1  publish-nugetorg.ps1  setup-deps.ps1  setup-models.ps1  smoke-test.ps1
.github/workflows/: ci.yml
BaoBaoPaddleOCR/: BaoBaoPaddleOCR.csproj  BaoBaoPaddleOcrClient.cs  OcrModels.cs
BaoBaoPaddleOCR.Cli/: BaoBaoPaddleOCR.Cli.csproj  Program.cs  WechatConversationParser.cs
BaoBaoPaddleOCR.Cli/Properties/: launchSettings.json
BaoBaoPaddleOCR.Models/: BaoBaoPaddleOCR.Models.csproj
BaoBaoPaddleOCR.Models/buildTransitive/: BaoBaoPaddleOCR.Models.targets
BaoBaoPaddleOCR.Native/: CMakeLists.txt
BaoBaoPaddleOCR.Native/include/: baobao_paddleocr.h
BaoBaoPaddleOCR.Native/include/shims/: dirent.h
BaoBaoPaddleOCR.Native/include/shims/polyclipping/: clipper.hpp
BaoBaoPaddleOCR.Native/src/: baobao_paddleocr.cpp
BaoBaoPaddleOCR/buildTransitive/: BaoBaoPaddleOCR.targets
BaoBaoPaddleOCR/buildTransitive/tools/: SetupModels.ps1
eng/: build-native.ps1  publish-nuget.ps1  setup-deps.ps1  setup-models.ps1
samples/NuGetConsumer/: NuGetConsumer.csproj  Program.cs
